fix broken grid, improve fonts and margins on mobiles

--- a/css/default.css
+++ b/css/default.css
@@ -12,8 +12,6 @@ body {
     height: 100vh;
     
     display: grid;
-    grid-template-rows: 40px 1fr auto;
-    grid-template-columns: auto;
 }
 
 .footer {
@@ -21,4 +19,22 @@ body {
     text-align: center;
     
     padding: 10px;
+}
+
+h1 {
+    font-size: 1.5rem;
+}
+
+h2 {
+    font-size: 1.3rem;
+}
+
+@media (min-width: 450px) {
+    h1 {
+        font-size: 2rem;
+    }
+
+    h2 {
+        font-size: 1.5rem;
+    }
 }
