--- a/css/post.css
+++ b/css/post.css
@@ -32,12 +32,12 @@
 h1 {
     margin-left: 10px;
     margin-right: 10px;
-    margin-bottom: 80px;
+    margin-bottom: 30px;
     margin-top: 10px;
     padding-left: 10px;
     padding-right: 10px;
 }
 
 h2 {
-    margin-top: 50px;
+    margin-top: 20px;
 }
